--- a/vcweb/forestry/static/css/forestry/style.css
+++ b/vcweb/forestry/static/css/forestry/style.css
@@ -12,44 +12,47 @@
     height: 700px;
 }
 #chatMessage {
+
 }
-.bound-status-dashboard p {
+
+.forestry-status-dashboard {
+    height: 100px;
+    width: 135px;
+    margin-right: 35px;
+    padding: 8px 8px 8px 8px;
+}
+
+.forestry-status-dashboard p {
     padding-top: 15px;
     font-size: 2em;
 }
-.bound-status-dashboard h4 {
+.forestry-status-dashboard h4 {
     border-bottom: 1px solid #ccc;
-}
-.bound-status-dashboard {
-    height: 100px;
-    width: 115px;
-    margin-right: 35px;
-    padding: 8px 8px 8px 8px;
 }
 .zero-harvest-decision {
     margin: 0 0 0 -5px;
     width: 40px;
     height: 40px;
-    background: url('/static/images/bound/zero-trees-inactive.png') no-repeat;
+    background: url('../../images/forestry/zero-trees-inactive.png') no-repeat;
 }
 .zero-harvest-decision.selected {
-    background: url('/static/images/bound/zero-trees-active.png') no-repeat !important;
+    background: url('../../images/forestry/zero-trees-active.png') no-repeat !important;
 }
 .zero-harvest-decision:hover {
-    background: url('/static/images/bound/zero-trees-hover.png') no-repeat;
+    background: url('../../images/forestry/zero-trees-hover.png') no-repeat;
 }
 .harvest-decision-tree {
     padding: 0 0 0 0;
     margin: 0 0 0 -5px;
     width: 40px;
     height: 40px;
-    background: url('/static/images/bound/tree-inactive.png') no-repeat;
+    background: url('../../images/forestry/tree-inactive.png') no-repeat;
 }
 .harvest-decision-tree.selected {
-    background: url('/static/images/bound/tree-active.png') no-repeat !important;
+    background: url('../../images/forestry/tree-active.png') no-repeat !important;
 }
 .harvest-decision-tree:hover {
-    background: url('/static/images/bound/tree-hover.png') no-repeat;
+    background: url('../../images/forestry/tree-hover.png') no-repeat;
 }
 .harvest-decision-tree-div {
     cursor: pointer;
@@ -76,5 +79,4 @@ col.current-player {
 }
 h3.compact {
     line-height: 10px;
-
 }
