--- a/vcweb/forestry/templates/forestry/participate.html
+++ b/vcweb/forestry/templates/forestry/participate.html
@@ -88,7 +88,7 @@
 </script>
 <script type='text/html' id='GENERAL_INSTRUCTIONS'>
 <div id='instructions1'>
-    <h4>Forestry</h4>
+    <h2>Forestry</h2>
     <p>
         Welcome.  Thank you for participating in this experiment. The following exercise is a way to actively
         participate in a project about individual decisions and natural resources. Imagine that you or your
@@ -127,42 +127,41 @@
 </div>
 </script>
 <script type='text/html' id='PRACTICE_ROUND_INSTRUCTIONS'>
-<h3>No Payment</h3>
+<h2>No Payment</h2>
 <p>
-There will be no payment for this practice session.
+    There will be no payment for this practice session.
 </p>
 <h3>Group and Individual Status</h3>
 <p>
-You will be able to observe the status of the members of your group each round. Likewise, group members will see your
-status, and those of your group.  You will be able to text chat with your group members.
+    You will be able to observe the status of the members of your group in each round. Likewise, group members will also see your
+    status, and those of your group. You'll be able to text chat with your group members.
 </p>
 <h3>Time</h3>
 <p>
-In each actual experiment round you will have a maximum of 60 seconds to make a harvest decision. In order to help you acquaint
-yourself with the experimental environment, you will have unlimited time to make a harvest decision the practice rounds.
+    In each actual experiment round you will have a maximum of 60 seconds to make a harvest decision. In order to help you acquaint
+    yourself with the experimental environment, you will have unlimited time to make a harvest decision the practice rounds.
 </p>
 <h3>Harvest Decision</h3>
 <p>
-There are two ways to submit a harvest
-decision:
+    There are two ways to submit a harvest decision:
 </p>
 <ol>
-<li>Select a harvest amount and click "Ok, I'm ready"</li>
-<li>Select a harvest amount and wait for the end of the session</li>
+    <li>Select a harvest amount and click "Ok, I'm ready"</li>
+    <li>Select a harvest amount and wait for the end of the session</li>
 </ol>
 <p>
-At the end of each round a countdown will alert you when there are 10 seconds remaining to make a harvest choice.  When
-the countdown reaches zero, any value you have selected will be auto-submitted.  If you do not select a harvest value,
-the default value of 0 will automatically be selected.  You may change your harvest decision multiple times before
-clicking "Ok, I'm Ready" until the 1-minute time limit is up.
+    At the end of each actual experimental round a countdown will alert you when there are 10 seconds remaining to
+    make a harvest choice. When the countdown reaches zero, any value you have selected will be auto-submitted.
+    If you do not select a harvest value, the default value of 0 will automatically be selected. You may change your
+    harvest decision multiple times before clicking "Ok, I'm Ready" until the 1-minute time limit is up.
 </p>
 <ul class='pager'>
-<li class='previous'>
-<a href='javascript:void(0);' data-bind='click: activateTemplate.bind($data, "GENERAL_INSTRUCTIONS")'>Back</a>
-</li>
-<li class='next'>
-<a href='javascript: void(0);' data-bind='click: participantReady.bind($data, participantGroupId() + " finished practice round instructions")'>I have fully read and understand these instructions</a>
-</li>
+    <li class='previous'>
+        <a href='javascript:void(0);' data-bind='click: activateTemplate.bind($data, "GENERAL_INSTRUCTIONS")'>Back</a>
+    </li>
+    <li class='next'>
+        <a href='javascript: void(0);' data-bind='click: participantReady.bind($data, participantGroupId() + " finished practice round instructions")'>I have fully read and understand these instructions</a>
+    </li>
 </ul>
 </script>
 <script type='text/html' id='PRACTICE_ROUND_RESULTS'>
@@ -198,28 +197,27 @@ clicking "Ok, I'm Ready" until the 1-minute time limit is up.
     <h2>Paid Experiment Instructions</h2>
     <h3>Two Sessions</h3>
     <p>
-    This experiment is composed of two different, unconnected sessions.  Your group will be randomly selected for each
-    session, so you will be playing with a different group each time.  We will pay you for one of these two sessions,
-    chosen at random.  You have exactly 50% chance of being paid for your earnings in each session.
+        This experiment is composed of two different, unconnected sessions. Your group will be randomly selected for each
+        session, so you will be playing with a different group each time.
+        We will pay you for one of these two sessions, chosen at random.  You have exactly 50% chance of being paid for your earnings in each session.
     </p>
     <h3>Group and Individual Status</h3>
     <p>
-    You will be able to observe the status of the members of your group each round.  Likewise group members will see
-    your status, and those of the group.
+        You will be able to observe the status of the members of your group each round. Likewise group members will see
+        your status, and those of the group.
     </p>
     <h3>Group Chat</h3>
     <p>
-    You will be able to text chat with the other members of your group.  Once you have made a harvest decision, you will
-    no longer be able to contribute to the chat for that round.
+        If availabel to chat during the round, you'll be able to text chat with the other members of your group.
+        But once you have made a harvest decision, you will no longer be able to contribute to the chat for that round.
     </p>
     <h3>Harvest Choice</h3>
     <p>
-    You will have a maximum of <i class='fa fa-clock-o'></i><span data-bind='text: roundDuration'></span> seconds to make a
-    harvest decision each round.  A countdown will alert you when there are
-    <span data-bind='text: warningCountdownTime'></span> seconds remaining to make a harvest choice.  When the countdown
-    reaches zero, any value you have selected will be submitted.  <strong>The default harvest is zero.</strong>
+        You will have a maximum of <i class='fa fa-clock-o'></i><span data-bind='text: roundDuration'></span> seconds to make a
+        harvest decision each round.  A countdown will alert you when there are
+        <span data-bind='text: warningCountdownTime'></span> seconds remaining to make a harvest choice. When the countdown
+        reaches zero, any value you have selected will be submitted.  <strong>The default harvest is zero.</strong>
     </p>
-
     <ul class='pager'>
         <li class='previous'>
         <a href='javascript: void(0)' data-bind='click: activateTemplate.bind($data, "PRACTICE_ROUND_RESULTS")'>Back</a>
@@ -315,7 +313,7 @@ clicking "Ok, I'm Ready" until the 1-minute time limit is up.
     </p>
     <h2>Payment</h2>
     <p>
-        You would have earned <strong class='text-success' data-bind='text: formatCurrency(parseFloat(totalEarnings()))'></strong> in this Experiment Session.
+        You have earned <strong class='text-success' data-bind='text: formatCurrency(parseFloat(totalEarnings()))'></strong> in this Experiment Session.
     </p>
     <p>
         Here are the results of other participants of your group.
@@ -436,12 +434,12 @@ clicking "Ok, I'm Ready" until the 1-minute time limit is up.
                     content: "The time remaining in this round is displayed here.  It will turn red when " + model.warningCountdownTime() + " seconds are left."
                 },
                 {
-                    element: "#harvest-decision-td-5", title: "Harvest Decision", placement: "bottom",
-                    content: "Click on the number of trees you'd like to harvest here.  For the purposes of this practice round, please select 5 now and click the 'Ok, I'm ready' button."
-                },
-                {
                     element: "#chatMessage", title: "Text Chat", placement: "left",
                     content: "When chat is enabled, you can communicate with your group by typing messages into this box and hitting the enter key."
+                },
+                {
+                    element: "#harvest-decision-td-5", title: "Harvest Decision", placement: "bottom",
+                    content: "Click on the number of trees you'd like to harvest here.  For the purposes of this practice round, please select 5 now and click the 'Ok, I'm ready' button."
                 }]);
                 model.tour().restart();
             }
