--- a/vcweb/core/templates/base.html
+++ b/vcweb/core/templates/base.html
@@ -11,7 +11,7 @@
 {% url 'core:profile' as profile %}
 {% url 'core:register' as register %}
 {% url 'core:report_issues' as issues_url %}
-{% url 'subject_pool:index' as subjectpool %}
+{% url 'core:subject_pool_index' as subjectpool %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
