--- a/vcweb/core/templates/participant/experiment-session-signup.html
+++ b/vcweb/core/templates/participant/experiment-session-signup.html
@@ -1,4 +1,4 @@
-{% extends "participant/base.html" %}
+{% extends "base.html" %}
 {% block title %}
 Signup for an Experiment Session
 {% endblock %}
