getting initial irrigation participate template to render

--- a/vcweb/core/templates/base.html
+++ b/vcweb/core/templates/base.html
@@ -62,7 +62,7 @@
                 <a class='dropdown-toggle' data-toggle='dropdown' href='#'>{{request.user.email}} <i class='fa fa-cog'></i><b class='caret'></b></a>
                     <ul class='dropdown-menu'>
                         <li><a href='{{ profile }}'>Account</a></li>
-                        <li><a href='{{ logout }}'>Logout</a></li>
+                        <li><a href='{{ logout }}'>Sign out</a></li>
                     </ul>
                 </li>
                 {% else %}
