--- a/vcweb/core/templates/experimenter/edit-configuration.html
+++ b/vcweb/core/templates/experimenter/edit-configuration.html
@@ -134,7 +134,7 @@
                 <div class="panel-body">
                     <div data-bind='if: roundConfigList().length == 0'>
                         <div class="callout callout-warning">
-                            No Rounds found for this Experiment Configuration. Click the "Add Round Configuration" button below to add a new one.
+                            No rounds have been configured yet for this experiment configuration. Click the "Add Round Configuration" button below to add a new one.
                         </div>
                     </div>
                     <div id="tree">
