--- a/vcweb/core/templates/account/login.html
+++ b/vcweb/core/templates/account/login.html
@@ -11,7 +11,7 @@
             {%  bootstrap_form form layout="horizontal" field_class="col-md-6"%}
             {% buttons layout='horizontal'%}
                 <button type="submit" class="btn btn-primary">
-                    <i class='fa fa-user'></i> Login
+                    <i class='fa fa-user'></i> Sign In
                 </button>
             {% endbuttons %}
         </form>
@@ -23,7 +23,7 @@
                 <img src=" {% static "images/ASU/ASU_logo.jpg" %}" alt="ASU Logo" width="50%">
             </p>
             <p>
-                Login via ASURITE
+            <a class='external' target='_blank' href='https://getprotected.asu.edu/services/auth'>CAS authentication</a> for ASU students
             </p>
             <div id="login_submit">
                 <a href="{% url 'cas.views.login' %}" class='submit'>Sign In</a>
