fixing URL namespaces and refactoring subjectpool into its own core subapp
core urls is already included under the core namespace and nesting includes with namespaces doesn't work.
lifted namespace includes into root url conf

--- a/vcweb/core/templates/base.html
+++ b/vcweb/core/templates/base.html
@@ -11,7 +11,7 @@
 {% url 'core:profile' as profile %}
 {% url 'core:register' as register %}
 {% url 'core:report_issues' as issues_url %}
-{% url 'core:subject_pool_index' as subjectpool %}
+{% url 'subjectpool:experimenter_index' as subjectpool %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
