Adding how_up_payment and maximum_payment fields to edit experiment config page Fixes issue #214

--- a/vcweb/core/templates/experimenter/edit-configuration.html
+++ b/vcweb/core/templates/experimenter/edit-configuration.html
@@ -40,6 +40,18 @@
                     {{ experiment_config_form.registration_email_subject|addcss:"form-control input-sm" }}
                 </div>
             </div>
+            <div class="form-group">
+                <label class="col-md-4 control-label">Show up payment</label>
+                <div class="col-md-3">
+                    {{ experiment_config_form.show_up_payment|addcss:"form-control input-sm" }}
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-md-4 control-label">Maximum payment</label>
+                <div class="col-md-3">
+                    {{ experiment_config_form.maximum_payment|addcss:"form-control input-sm" }}
+                </div>
+            </div>
         </div>
         <div class="col-md-6">
             <div class="form-group">
