--- a/vcweb/experiment/forestry/templates/forestry/participate.html
+++ b/vcweb/experiment/forestry/templates/forestry/participate.html
@@ -253,13 +253,13 @@
         <table class='table table-bordered table-condensed group-status'>
             <colgroup>
                 <col>
-                <!-- ko foreach: playerData -->
+                <!-- ko foreach: groupData -->
                 <col data-bind='css: { "current-player": id() === $root.participantGroupId() }'>
                 <!-- /ko -->
             </colgroup>
             <thead>
                 <tr><th>Player</th>
-                    <!-- ko foreach: playerData -->
+                    <!-- ko foreach: groupData -->
                     <th data-bind='css: { "current-player": id() === $root.participantGroupId() }, text: number'></th>
                     <!-- /ko -->
                 </tr>
@@ -267,7 +267,7 @@
             <tbody>
             <tr>
                 <td>Last harvest</td>
-                <!-- ko foreach: playerData -->
+                <!-- ko foreach: groupData -->
                 <td data-bind='text: lastHarvestDecision, css: { "current-player": id() === $root.participantGroupId() }'></td>
                 <!-- /ko -->
             </tr>
