--- a/vcweb/static/css/style.css
+++ b/vcweb/static/css/style.css
@@ -56,7 +56,7 @@ label.error {
 }
 .nav-footer {
     padding-top: 20px;
-    margin: auto;
+    margin-left: -40px;
 }
 .footer-logo {
     padding-top: 15px;
@@ -308,7 +308,6 @@ fieldset.scheduler-border {
     -webkit-box-shadow:  0px 0px 0px 0px #000;
             box-shadow:  0px 0px 0px 0px #000;
 }
-
 legend.scheduler-border {
     font-size: 1.2em !important;
     font-weight: bold !important;
@@ -317,11 +316,9 @@ legend.scheduler-border {
     padding:0 10px;
     border-bottom:none;
 }
-
 .error-row {
     color: red;
 }
-
 /* Calendar Event colors */
 .event-color-1 {
   background-color: #1f77b4 !important;
