--- a/vcweb/core/templates/base.html
+++ b/vcweb/core/templates/base.html
@@ -137,7 +137,7 @@
     {% endblock footer %}
 </footer>
     {% with jquery_version="2.1.1" %}
-    <script src='//ajax.googleapis.com/ajax/libs/jquery/{{jquery_version}}/jquery.min.js'></script>
+    <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/{{jquery_version}}/jquery.min.js'></script>
     {% endwith %}
     <!-- Latest compiled and minified JavaScript -->
     <script src='{{STATIC_URL}}bootstrap/js/bootstrap.min.js'></script>
