fixing deactivate in experimenter dashboard, fixes issue #217
TODO: remove duplication between monitor / dashboard experimenter actions

--- a/vcweb/core/templates/experimenter/dashboard.html
+++ b/vcweb/core/templates/experimenter/dashboard.html
@@ -198,7 +198,7 @@
                  .done(modifyExperimentCallback(experimentModel));
             };
             model.deactivate = function(experimentModel, event) {
-                $.post("/api/experiment/update", { experiment_id: experimentModel.pk(), action: "update" })
+                $.post("/api/experiment/update", { experiment_id: experimentModel.pk(), action: "deactivate" })
                  .done(modifyExperimentCallback(experimentModel));
             };
             model.cloneExperimentConfiguration = function(configurationModel, Event) {
