TODO: add a contact form inline here.

--- a/vcweb/core/templates/contact.html
+++ b/vcweb/core/templates/contact.html
@@ -8,10 +8,10 @@
 <div id='post'>
 	<h2 class='title'>Contact Us</h2>
     <div class='panel panel-warning'>
-        <div class='panel-heading'>VCWeb Beta</div>
+        <div class='panel-heading'>vcweb beta</div>
         <div class='panel-body'>
-            VCWeb is currently in a closed beta. If you'd like to request an experimenter account or have any
-            <a href='#bugs'>bug reports</a> or feedback for our development team please feel free to
+            The virtual commons web environment is currently in a closed beta. If you'd like to request an experimenter
+            account or have any <a href='#bugs'>bug reports</a> or feedback for our development team please feel free to
             <a class='external' href='http://commons.asu.edu/contact'>email us via our contact form</a> or
             <a class='external' href='https://bitbucket.org/virtualcommons/vcweb/issues'>create issues on our BitBucket issue tracker</a>.
             Thanks for your interest!
@@ -24,7 +24,7 @@
             <a href='{{ issues_url }}'>Let us know here.</a>
             Please include relevant detail on <strong>what actions led to the bug</strong>, including
             the <strong>URL in your browser bar</strong> {% comment %} [<a href='#footnote-1'>1</a>] {% endcomment %} and any <strong>relevant screenshots</strong>. Thanks for helping us make
-            VCWEB better!
+            vcweb better!
         </div>
     </div>
 
